<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">对冲基金</string>
    <string name="app_name_full">对冲基金</string>
    <string name="language">CN</string>
    <string name="share_label">分享</string>
    <string name="setting_label">设置</string>
    <string name="sure_label">确定</string>
    <string name="search_label">搜索</string>
    <string name="search_hint_label">请输股票代码</string>
    <string name="favorite_label">赞</string>
    <string name="good_label">好</string>
    <string name="filter_label">过滤</string>
    <string name="comment_label">评论</string>
    <string name="comment_share_label">分享评论</string>
    <string name="contactus_label">联系我们</string>
    <string name="notice_label">免责声明</string>
    <string name="more_label">更多&#8230;</string>
    <string name="loading_label">正在加载&#8230;</string>
    <string name="loading_more_data_label">加载更多数据</string>
    <string name="loading_data_label">正在加载数据&#8230;</string>
    <string name="send_email_label">发送邮件</string>
    <string name="intro_label">简介</string>
    <string name="date_label">日期</string>
    <string name="selected_items_tip">%d 选中</string>
    <string name="select_date_title">选择日期</string>
    <string name="no_data_tip">没有查询到相关数据</string>
    <string name="no_network_tip">请检查您的网络连接是否正常</string>
    <string name="unknown_error_tip">出现未知错误</string>
    <string name="item_placerholder">--</string>
    <string name="hf_label">对冲基金</string>
    <string name="menu_hf_home">首页</string>
    <string name="menu_hf_stock_rank">共同持股</string>
    <string name="menu_hf_analysis">基金分析</string>
    <string name="menu_mutual_security_compare">对比</string>
    <string name="menu_hf_spx_pe">标普市盈率</string>
    <string name="menu_hf_spx_shiller_pe">标普席勒市盈率</string>
    <string name="menu_hf_spx_eps">标普每股盈余</string>
    <string name="menu_hf_spx_dps">标普每股股利</string>
    <string name="hf_title_spx_pe">市盈率</string>
    <string name="hf_title_spx_shiller_pe">席勒市盈率</string>
    <string name="hf_title_spx_eps">每股盈余</string>
    <string name="hf_title_spx_dps">每股股利</string>
    <string name="drawer_close">已关闭导航视图</string>
    <string name="drawer_open">已开导航视图</string>
    <string name="fund_detail_menu_holdings">持仓详情</string>
    <string name="fund_detail_menu_industry">持仓行业</string>
    <string name="fund_detail_menu_news">新闻资讯</string>
    <string name="fund_detail_filter_filling">持仓日期</string>
    <string name="fund_detail_filter_security">证券类型</string>
    <string name="fund_detail_filter_sort">排序选择</string>
    <string name="analysis_menu_portfolio">持仓市值</string>
    <string name="analysis_menu_industry">行业分布</string>
    <string name="analysis_menu_mutual_security">共同持股</string>
    <string name="analysis_header_name">名称</string>
    <string name="analysis_header_price">现价</string>
    <string name="analysis_header_change_percent">涨跌幅</string>
    <string name="analysis_header_change">涨跌点数</string>
    <string name="analysis_header_held_count">持有数</string>
    <string name="loading_analysis_select_manager_tip">点击选择基金</string>
    <string name="loading_analysis_select_date_tip">点击选择日期</string>
    <string name="security_type_all">所有</string>
    <string name="security_type_stock">股票</string>
    <string name="security_type_call">看涨期权</string>
    <string name="security_type_put">看跌期权</string>
    <string name="security_type_bond">债券</string>
    <string name="chart_holdings_value_title">投资组合总市值(x$1000)</string>
    <string name="chart_industry_title">持仓股票行业分布(%)</string>
    <string name="chart_spx_pe_title">标普500市盈率</string>
    <string name="chart_spx_shiller_pe_title">标普500席勒市盈率</string>
    <string name="chart_spx_eps_title">标普500每股盈余</string>
    <string name="chart_spx_dps_title">标普500每股股利</string>
    <string name="chart_mutual_security_history_title">%1$s 占组合比例(%%)</string>
    <string name="chart_mutual_security_history_tip">%1$s\n持股数：%2$s\n占组合：%3$s%%</string>
    <string name="chart_mutual_security_comparator_port_desc">占组合(%)</string>
    <string name="chart_mutual_security_comparator_shares_desc">持股数</string>
    <string name="holding_list_header_shares">持股数</string>
    <string name="holding_list_header_value">市值(x$1000)</string>
    <string name="holding_list_header_activity">变动</string>
    <string name="holding_list_header_port">占组合</string>
    <string name="mutual_security_list_header_chart">详情</string>
    <string name="industry_full_name"></string>
    
    <string name="spx_pe_info"><![CDATA[Price to earnings ratio, based on trailing twelve month “as reported” earnings.\nCurrent PE is estimated from latest reported earnings and current market price.]]></string>
    <string name="spx_shiller_pe_info"><![CDATA[Shiller PE ratio for the S&P 500.\nPrice earnings ratio is based on average inflation-adjusted earnings from the previous 10 years, known as the Cyclically Adjusted PE Ratio (CAPE Ratio), Shiller PE Ratio, or PE 10.]]></string>
    <string name="spx_eps_info"><![CDATA[S&P 500 Earnings Per Share. 12-month real earnings per share — inflation adjusted, constant September 2014 dollars.]]></string>
    <string name="spx_dps_info"><![CDATA[12-month real dividend per share.]]></string>

    <string name="contact_us_info">联系方式</string>
    <string name="contact_us_info_desc">QQ，Email</string>
    <string name="contact_us_rate">给个好评</string>
    <string name="contact_us_rate_desc">鼓励一下我们辛苦的劳动</string>
    <string name="contact_us_business">商业合作</string>
    <string name="contact_us_business_desc">洽谈广告，数据，API接口等</string>
    <string name="contact_us_suggestion">建议反馈</string>
    <string name="contact_us_suggestion_desc">反馈您使用中遇到的问题，好的建议</string>
    <string name="contact_us_business_detail">如果您有兴趣在App中嵌入您的广告，或者对我们展示的数据有需求，或者希望我们能提供公开的API接口，亦或其它形式的合作，都可以发邮件至app@oppsisfund.com。</string>
    <string name="contact_us_i_know_label">我知道了</string>
	<string name="contact_us_qq">QQ：315058107</string>
	<string name="contact_us_email">邮件：app@oppsisfund.com</string>
	<string name="contact_us_qq_link">http://user.qzone.qq.com/315058107</string>
	<string name="contact_us_email_address">app@oppsisfund.com</string>
	
	<string name="setting_push_message">消息通知</string>
	<string name="setting_push_message_desc">是否接收消息推送</string>
	<string name="setting_check_version">检查更新</string>
	<string name="setting_check_version_desc">查看是否有更新的版本</string>
	<string name="setting_clear_cache">清理缓存</string>
	<string name="setting_clear_cache_desc">如果您的磁盘空间不足，可以清理一下</string>
	<string name="setting_update_no_update">暂无更新</string>
	<string name="setting_update_no_wifi">没有wifi连接， 只能在wifi下更新</string>
	<string name="setting_update_timeout">连接超时，请检查网络连接是否正常</string>
	<string name="setting_cache_computing">正在计算&#8230;</string>
	<string name="setting_cache_ok">清理缓存成功</string>
    
    <string name="statement"><![CDATA[
	    数据或内容由金融交易所提供，并可能会由于金融交易所或数据提供方的原因而出现延迟现象。本人 不会验证任何数据，也不承担任何数据验证的义务。
<br/><br/>
本人或内容提供方、金融交易所及其所有关联机构和业务合作伙伴 (A) 明确声明对数据的准确性、适用性和完整性不承担任何责任，并且 (B) 对数据中的任何错误、遗漏或瑕疵，延迟和中断提供此类数据，或依据数据而采取的任何操作概不负责。对于您因使用我们的信息而遭受的任何损失，本人 及其所有信息提供商均不承担任何责任。此处所用的“业务合作伙伴”并非指与 本人 建立代理关系、合作伙伴关系或联营关系的各方。
<br/><br/>
您同意在未获得书面允许的情况下，不会对本文中的任何数据或信息进行复制、修改、重定格式、下载、存储、重现、重新处理、传播或再分发，也不会在商业企业中使用这些数据或信息。所有数据和信息均按原样提供，只能作为个人信息使用，不得用于交易或咨询用途。在进行任何交易之前，请咨询您的经纪人或财务代表，以确认报价。
<br/><br/>
本人或第三方数据或内容提供方对各自所提供的数据和信息享有专有权。
<br/><br/>   
	]]></string>
	
    <string name="share_app_label">【对冲基金】分析工具，想要查看大佬的持仓，分析对比哪些股票被新买进，哪些被增持，哪些被减持，哪些被抛弃，请猛戳这里(%1$s)</string>
    <string name="share_app_analysis_label">【对冲基金】分析工具，分析对比不同大佬的持仓情况，股票行业分布，共同持股，请猛戳这里(%1$s)</string>
    <string name="share_app_rank_label">【对冲基金】分析工具，查看哪些股票被大佬们持有的最多，请猛戳这里(%1$s)</string>
    <string name="share_app_spx_pe_label">【对冲基金】分析工具，查看标普500指数百年来的市盈率走势情况，请猛戳这里(%1$s)</string>
    <string name="share_app_spx_shiller_pe_label">【对冲基金】分析工具，查看标普500指数百年来的席勒市盈率走势情况，请猛戳这里(%1$s)</string>
    <string name="share_app_spx_eps_label">【对冲基金】分析工具，查看标普500指数百年来的每股收益走势情况，请猛戳这里(%1$s)</string>
    <string name="share_app_spx_dps_label">【对冲基金】分析工具，查看标普500指数百年来的每股股利走势情况，请猛戳这里(%1$s)</string>
    <string name="share_app_fund_detail_label">【对冲基金】分析工具，查看大佬的持股详细情况，以及持仓行业分析和最新的新闻资讯，请猛戳这里(%1$s)</string>
    <string name="share_app_stock_detail_label">【对冲基金】分析工具，查看【%1$s】的走势情况，请猛戳这里(%2$s)</string>
    <string name="share_app_news_detail_label">【对冲基金】分析工具，查看【%1$s】，请猛戳这里(%2$s)</string>
    
    <string name="manager_icon_menu_port_value">持仓市值</string>
    <string name="manager_icon_menu_industry">@string/fund_detail_menu_industry</string>
    <string name="manager_icon_menu_news">@string/fund_detail_menu_news</string>
    <string name="filter_dialog_title">选择过滤条件</string>
    
</resources>