<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oppsis.app.hftracker.MainActivity" >

    <item
        android:id="@+id/menu_item_spx_info"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom|withText"
        android:title="@string/intro_label"/>
    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:showAsAction="ifRoom"
        android:title="@string/share_label"/>
    <item
        android:id="@+id/menu_item_more"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:title="@string/more_label">
        <menu>
            <item
                android:id="@+id/menu_item_settings"
                android:icon="@drawable/ic_action_settings_light"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/setting_label"/>
            <item
                android:id="@+id/menu_item_contactus"
                android:icon="@drawable/ic_action_person_light"
                android:orderInCategory="200"
                android:showAsAction="ifRoom|withText"
                android:title="@string/contactus_label"/>
            <item
                android:id="@+id/menu_item_notice"
                android:icon="@drawable/ic_action_about_light"
                android:orderInCategory="300"
                android:showAsAction="ifRoom|withText"
                android:title="@string/notice_label"/>
        </menu>
    </item>

</menu>