<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:id="@+id/navdrawer_items_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/filter_panel_padding" >

        <LinearLayout
            android:id="@+id/fund_holding_date_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/FilterMenu.TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:gravity="start|center_vertical"
                android:text="@string/fund_detail_filter_filling" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="7dp"
                android:background="#e5e5e5"
                android:gravity="start|center_vertical" />

            <Spinner
                android:id="@+id/fund_date_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fund_security_type_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/FilterMenu.TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="@dimen/filter_menu_section_margin"
                android:gravity="start|center_vertical"
                android:text="@string/fund_detail_filter_security" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="7dp"
                android:background="#e5e5e5"
                android:gravity="start|center_vertical" />

            <CheckBox
                android:id="@+id/fund_security_type_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:tag="type|lla"
                android:text="@string/security_type_all" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/fund_security_type_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="type|stock"
                    android:text="@string/security_type_stock" />

                <CheckBox
                    android:id="@+id/fund_security_type_bond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:tag="type|bond"
                    android:text="@string/security_type_bond" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/fund_security_type_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="type|call"
                    android:text="@string/security_type_call" />

                <CheckBox
                    android:id="@+id/fund_security_type_put"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/security_type_put_margin"
                    android:tag="type|put"
                    android:text="@string/security_type_put" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fund_sort_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/FilterMenu.TitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginTop="@dimen/filter_menu_section_margin"
                android:gravity="start|center_vertical"
                android:text="@string/fund_detail_filter_sort" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="7dp"
                android:background="#e5e5e5"
                android:gravity="start|center_vertical" />

            <Spinner
                android:id="@+id/fund_sort_field_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/fund_sort_direction_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/filter_setting_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/filter_menu_section_margin"
            android:text="@string/sure_label"
            android:enabled="false" />
    </LinearLayout>

</merge>